--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+to<!DOCTYPE html>
 <html class="no-js" lang="en">
 
 <head>
@@ -48,8 +48,8 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>  Your Name </h1>
-            <h2> Email Address </h2>
+            <h1> Mounika. K </h1>
+            <h2mounika202000@gmail.com </h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
